2020-06-22  Keith Marshall  <keith@users.osdn.me>

	Support options interpretation from an unborn options object.

	* src/pkgopts.h (pkgOpts::Test, pkgOpts::IsSet, pkgOpts::GetValue)
	(pkgOpts::GetString, pkgOpts::SetFlags): Delegate then to static class
	methods, with inline wrappers passing "this" pointer explicitly.

	* src/pkgopts.cpp (pkgOpts::Test, pkgOpts::IsSet, pkgOpts::GetValue)
	(pkgOpts::GetString, pkgOpts::SetFlags): Implement the static methods.
	(pkgPreferenceEvaluator::PresetScriptHook) [! pkgOptions()]: Do not
	evaluate pkgOptions()->IsSet(); assume that it would implicitly return
	false, thus suppressing all dependent processing, including subsequent
	evaluation of pkgOptions()->GetString().

2020-06-21  Keith Marshall  <keith@users.osdn.me>

	Declare functions as void when return value is immaterial.

	* src/pkginet.h (pkgDownloadMeter::Update): Declare it as a pure
	virtual void function, rather than as pure virtual int.

	* src/pkginet.cpp (pkgDownloadMeterTTY::Update)
	* src/pkgnget.cpp (pkgDownloadMeterGUI::Update): Amend derivative
	implementations to match; do not return anything.

2020-06-21  Keith Marshall  <keith@users.osdn.me>

	Ensure non-void functions always return explicit values.

	* src/guimain.cpp (WinMain): Remove explicit EXIT_FAILURE returns from
	individual exception handlers; relocate it to the default execution
	path, to which all such handlers will fall through.

	* src/dmhguix.cpp (dmhTypeGUI::notify) [DMH_COMPILE_DIGEST]: Return
	number of bytes added to message queue; fall through, to return zero,
	on failure to extend the queue.

2020-06-20  Keith Marshall  <keith@users.osdn.me>

	Simplify numeric argument interpreter function.

	* src/clistub.c (xatoi) [input != NULL]: Delegate to...
	(strtol): ...this standard library function; hence delete redundant
	local implementation, within the NULL pointer rejection guard.

2020-06-19  Keith Marshall  <keith@users.osdn.me>
